--- a/navigation/pubspec.yaml
+++ b/navigation/pubspec.yaml
@@ -17,7 +17,13 @@ dependencies:
   domain:
     path: ../domain
   main_page:
-    path: ../features/main_page
+    path: ../features/home
+  cart:
+    path: ../features/cart
+  order_history:
+    path: ../features/order_history
+  settings:
+    path: ../features/settings
   flutter:
     sdk: flutter
 
@@ -25,6 +31,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  auto_route_generator: ^5.0.2
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
