--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   get_it: ^7.6.0
   equatable: ^2.0.5
   cloud_firestore: ^4.8.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
