--- a/data/pubspec.yaml
+++ b/data/pubspec.yaml
@@ -19,5 +19,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.1
+  build_runner:
 
 flutter:
