--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cloud_firestore: ^4.8.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  connectivity_plus: ^4.0.2
 
 dev_dependencies:
   flutter_test:
