--- a/features/home/pubspec.yaml
+++ b/features/home/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
     path: ../../core_ui
   navigation:
     path: ../../navigation
+  another_flushbar: ^1.12.30
 
 dev_dependencies:
   flutter_test:
