[PT-5] add bloc and navigation for auth

--- a/navigation/pubspec.yaml
+++ b/navigation/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
     path: ../core_ui
   domain:
     path: ../domain
+  auth:
+    path: ../features/auth
   main_page:
     path: ../features/home
   cart:
