--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -19,12 +19,14 @@ dependencies:
 
   flutter_bloc: ^8.1.3
   firebase_core: ^2.14.0
+  firebase_auth: ^4.9.0
   get_it: ^7.6.0
   equatable: ^2.0.5
   cloud_firestore: ^4.8.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   connectivity_plus: ^4.0.2
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
