--- a/features/settings/pubspec.yaml
+++ b/features/settings/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
     path: ../../domain
   core_ui:
     path: ../../core_ui
+  auth:
+    path: ../../features/auth
   url_launcher: ^6.1.14
 
 
