--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
     path: ../domain
   navigation:
     path: ../navigation
+  core_ui:
+    path: ../core_ui
 
   flutter_bloc: ^8.1.3
   firebase_core: ^2.14.0
